# TCI-Streamer

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  THIRD-PARTY-LICENSES  build-linux-via-wsl.cmd  build.cmd  build.sh  setup-libopus-linux.sh  setup-libopus-windows.ps1
.cargo/: README.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: PUBLICATIE.md  onderzoek-afspeelbuffer.md
src/: lib.rs
src/codec/: audio.rs  filter.rs  flac.rs  iq.rs  mod.rs
src/launcher/: mod.rs
src/proto/: mod.rs  tci.rs
test/: diagnose-verbinding.cmd  test-keten.cmd  test-settings.cmd
