[package]
name = "tci-streamer"
version = "0.1.23"
edition = "2021"
description = "TCI proxy with bandwidth compression (audio + IQ/spectrum)"

[[bin]]
name = "tci-streamer-server"
path = "src/bin/server.rs"

[[bin]]
name = "tci-streamer-client"
path = "src/bin/client.rs"

[[bin]]
name = "fake-tci-server"
path = "src/bin/fake_tci_server.rs"

[[bin]]
name = "tci-viewer"
path = "src/bin/tci_viewer.rs"
required-features = ["viewer"]

[[bin]]
name = "tci-launcher"
path = "src/bin/tci_launcher.rs"
required-features = ["viewer"]

[dependencies]
tokio = { version = "1.40", features = ["full"] }
# tokio-tungstenite zonder TLS standaard. Voor wss:// support compileren met:
#   cargo build --release --features tls
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "handshake"] }
tungstenite = { version = "0.24", default-features = false }
futures-util = "0.3"
url = "2.5"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytes = "1.7"
byteorder = "1.5"
rustfft = "6.2"

# Opus codec — clean Rust binding, werkt op Windows en Linux
# Op Linux: pkg-config + libopus-dev. Op Windows: bundle libopus.dll of statically link.
opus = "0.3"

# FLAC — pure-Rust, geen C vendoring (anders dan libopus). flacenc voor
# encoding, claxon voor decoding. Beide compileren op stable Rust en op
# Windows MSVC zonder externe libs of CMake.
# par/mimalloc uit: we encoden kleine chunks, multithreading heeft geen zin
# en houdt de dependency tree klein.
flacenc = { version = "0.5", default-features = false }
claxon = "0.4"

# eframe/egui voor de grafische tci-viewer (spectrum + waterfall + audio)
# en de tci-launcher (GUI om de streamer-binaries te starten).
# Optional: alleen gebruikt door tci-viewer en tci-launcher; de andere
# binaries hebben dit niet nodig. default-features=false om alleen native
# (glow) backend te trekken, geen web/wgpu/accesskit/persistence.
eframe = { version = "0.33", default-features = false, features = ["default_fonts", "glow"], optional = true }
# Native file dialogs voor de launcher (folder picker, save dialog).
rfd = { version = "0.15", optional = true }

[features]
default = ["viewer"]
# Schakel de grafische tci-viewer EN de grafische tci-launcher in. Standaard
# aan zodat `cargo build` alle binaries levert. Uitschakelen voor snellere
# builds van alleen de streaming-binaries (geen GUI):
#   cargo build --release --no-default-features
viewer = ["dep:eframe", "dep:rfd"]
# Schakel TLS in voor wss:// connecties. Niet standaard aan omdat de
# meeste deployments via VPN tunnelen (zie README).
tls = ["tokio-tungstenite/native-tls", "tungstenite/native-tls"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
